# fiki_backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: fff679895c66_create_user_role_summary_and_comment_.py
src/: __init__.py  config.py  enums.py  models.py
src/routers/: auth.py  comment.py  summary.py  user.py
src/schemas/: auth.py  comment.py  role.py  summary.py  user.py
src/services/: comment.py  summary.py  user.py
tests/: conftest.py
tests/auth/: test_auth.py
tests/summaries/: schemas.py  test_create_summary.py
tests/users/: schemas.py  test_create_user.py  test_delete_user.py  test_read_user.py  test_update_user.py
